--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
 <a href="#license" id="license" style="color: inherit; text-decoration: none;">
   <h2>License</h2>
 </a>
-<p>MIT © [Jon Lara](<a href="https://github.com/Jon">https://github.com/Jon</a> Lara)</p>
+<p>MIT © <a href="https://github.com/nullxx">nullx</a></p>
 </div></div><div class="col-4 col-menu menu-sticky-wrap menu-highlight"><nav class="tsd-navigation primary"><ul><li class="current"><a href="modules.html">Exports</a></li></ul></nav><nav class="tsd-navigation secondary menu-sticky"><ul><li class="tsd-kind-variable"><a href="modules.html#Prompt" class="tsd-kind-icon">Prompt</a></li><li class="tsd-kind-function"><a href="modules.html#usePrompt" class="tsd-kind-icon">use<wbr/>Prompt</a></li></ul></nav></div></div></div><footer class="with-border-bottom"><div class="container"><h2>Settings</h2><p>Theme <select id="theme"><option value="os">OS</option><option value="light">Light</option><option value="dark">Dark</option></select></p></div></footer><div class="container tsd-generator"><p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div><div class="overlay"></div><script src="assets/main.js"></script></body></html>
